# bark-esp

./: .envrc  .gitmodules  Cargo.toml  sdkconfig.defaults
.cargo/: config.toml
native/: CMakeLists.txt  critical.c  native.c  queue.c  signal.c  streambuffer.c
native/include/: bark_native_bindings.h
native/include/bark_native/: critical.h  queue.h  streambuffer.h
src/: main.rs  stats.rs
src/app/: consts.rs  mod.rs  protocol.rs  queue.rs  stream.rs
src/platform/: dac.rs  event.rs  mod.rs  net.rs  network.rs  nvs.rs  wifi.rs
src/platform/net/: udp.rs
src/sync/: eventgroup.rs  isr.rs  mod.rs  mutex.rs  queue.rs  ringbuf.rs  ringbuffer.rs  signal.rs  streambuffer.rs
src/system/: event.rs  eventgroup.rs  eventloop.rs  heap.rs  log.rs  logo.rs  macros.rs  mod.rs  network.rs  panic.rs  queue.rs  rt.rs  sched.rs  sema.rs  task.rs  uart.rs  wifi.rs
src/system/heap/: arc.rs  array.rs  boxed.rs  dma.rs
src/system/sema/: raw.rs
src/system/task/: execute.rs  registry.rs  top.rs  waker.rs
src/util/: flexi.rs  mod.rs
