[package]
name = "bark-esp"
version = "0.0.0"
authors = ["Hailey Somerville <hailey@hailey.lol>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
ascii = { version = "1.1.0", default-features = false }
cstr = "0.2.11"
derive_more = { version = "0.99.17" }
esp-idf-svc = { version = "0.46", default-features = false }
esp-idf-sys = { version = "0.33", default-features = false, features = ["native"] }
esp-println = { version = "0.6.0", default-features = false, features = ["esp32", "uart"] }
heapless = { version = "0.7.16", default-features = false }
log = { version = "0.4.17", default-features = false }

[patch.crates-io]
embuild = { git = "https://github.com/haileys/embuild" }
# esp-idf-sys = { git = "https://github.com/haileys/esp-idf-sys" }
esp-idf-sys = { path = "../esp-idf-sys" }

# esp-idf-hal = { version = "0.41", optional = true, default-features = false }
# embedded-svc = { version = "0.25", optional = true, default-features = false }

[build-dependencies]
embuild = "0.31.2"

# [[package.metadata.esp-idf-sys.extra_components]]
# component_dirs = ["vendor/esp-idf/components/esp_wifi"]
# bindings_header = "bindings.h"
