[package]
name = "bark-esp"
version = "0.0.0"
authors = ["Hailey Somerville <hailey@hailey.lol>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
bark-protocol = { git = "https://github.com/haileys/bark", branch = "esp" }

ascii = { version = "1.1.0", default-features = false }
atomic_enum = "0.2.0"
bitflags = { version = "2.4.0", features = [] }
critical-section = "1.1.2"
cstr = "0.2.11"
derive_more = { version = "0.99.17" }
esp-idf-sys = { version = "0.33", default-features = false, features = ["native"] }
esp-pbuf = "0.1"
esp-println = { version = "0.6.0", default-features = false, features = ["esp32", "uart"] }
futures = { version = "0.3.28", default-features = false }
heapless = { version = "0.7.16", default-features = false }
log = { version = "0.4.17", default-features = false }
memoffset = "0.9.0"
pin-project = "1.1.3"
static_assertions = "1.1.0"

[patch.crates-io]
embuild = { git = "https://github.com/haileys/embuild" }
esp-idf-sys = { git = "https://github.com/haileys/esp-idf-sys" }

[build-dependencies]
embuild = "0.31.2"

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["native"]
bindings_header = "native/include/bark_native_bindings.h"
